@@ -1,3 +1,9 @@
+2023-09-25  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test46-read-password): Use `copy-tree' but
+	`copy-sequence'.
+	(tramp-test46-read-otp-password): New test.
+
 2023-09-14  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp--test-netbsd-p): New defun.
